@@ -19,11 +19,11 @@ Gradle提供了多种机制来配置Gradle本身和特定项目的行为。以�
 
 - [System properties](#系统属性)，例如存储在`gradle.properties`文件中的`systemProp.http.proxyHost=somehost.org`。
 
-- [Gradle properties](#Gradle属性)，例如`org.gradle.caching=true`，通常存储在项目根目录或`GRADLE_USER_HOME`环境变量的`gradle.properties`文件中。
+- [Gradle properties](#gradle属性)，例如`org.gradle.caching=true`，通常存储在项目根目录或`GRADLE_USER_HOME`环境变量的`gradle.properties`文件中。
 
 - [Environment variables](#环境变量)，例如执行Gradle的环境来源的`GRADLE_OPTS`。
 
-除了配置构建环境之外，还可以使用[Project properties](#项目属性)（例如`-PreleaseType=final`）配置给定的项目构建。
+除了配置构建环境之外，还可以使用[Project properties](#project属性)（例如`-PreleaseType=final`）配置给定的项目构建。
 
 ## Gradle属性
 
@@ -109,17 +109,284 @@ sysProp=shouldBeOverWrittenBySysProp
 systemProp.system=systemValue
 ```
 
-111
-<code-switcher/>
+<CodeSwitcher :languages="{ groovy: 'Groovy', kotlin: 'Kotlin' }">
+  <template v-slot:groovy>
+
+  ``` groovy
+  // build.gradle
+
+  task printProps {
+      doLast {
+          println commandLineProjectProp
+          println gradlePropertiesProp
+          println systemProjectProp
+          println System.properties['system']
+      }
+  }
+  ```
+
+  </template>
+  <template v-slot:kotlin>
+
+  ``` kotlin
+  // build.gradle.kts
+
+  // Project properties can be accessed via delegation
+  val commandLineProjectProp: String by project
+  val gradlePropertiesProp: String by project
+  val systemProjectProp: String by project
+
+  tasks.register("printProps") {
+      doLast {
+          println(commandLineProjectProp)
+          println(gradlePropertiesProp)
+          println(systemProjectProp)
+          println(System.getProperty("system"))
+      }
+  }
+  ```
+
+  </template>
+</CodeSwitcher>
+
+``` sh {1}
+$ gradle -q -PcommandLineProjectProp=commandLineProjectPropValue -Dorg.gradle.project.systemProjectProp=systemPropertyValue printProps
+commandLineProjectPropValue
+gradlePropertiesValue
+systemPropertyValue
+systemValue
+```
 
 ## 系统属性
 
+使用`-D`命令行选项，可以将系统属性传递给运行Gradle的JVM。 gradle命令的`-D`选项与`java`命令的`-D`选项具有相同的效果。
+
+您还可以在`gradle.properties`文件中使用前缀`systemProp`设置系统属性。
+
+**在`gradle.properties`中指定系统属性**
+
+``` properties
+systemProp.gradle.wrapperUser=myuser
+systemProp.gradle.wrapperPassword=mypassword
+```
+
+以下系统属性可用。请注意，**命令行选项优先于系统属性**。
+
+- **`gradle.wrapperUser=(myuser)`**
+
+  指定用户名以使用HTTP基本认证从服务器下载Gradle发行版。在[Authenticated wrapper下载](https://docs.gradle.org/current/userguide/gradle_wrapper.html#sec:authenticated_download)中了解更多信息。
+
+- **`gradle.wrapperPassword=(mypassword)`**
+
+  指定使用Gradle包装器下载Gradle发行版的密码。
+
+- **`gradle.user.home=(path to directory)`**
+
+  指定Gradle用户的主目录。
+
+在多项目构建中，将忽略除根目录以外的任何项目中设置的“`systemProp.`”属性。也就是说，将仅检查根项目的`gradle.properties`文件中以“`systemProp.`”前缀开头的属性。
+
 ## 环境变量
 
-## 项目属性
+以下环境变量可用于`gradle`命令。请注意，**命令行选项和系统属性优先于环境变量**。
 
-## 配置jvm内存
+- **`GRADLE_OPTS`**
 
-## 使用项目属性配置任务
+  指定启动Gradle客户端VM时要使用的JVM参数。客户端VM仅处理命令行输入/输出，因此很少需要更改其VM选项。实际的构建由 **Gradle Daemon** 运行，不受此环境变量的影响。
+
+- **`GRADLE_USER_HOME`**
+
+  指定Gradle用户的主目录（如果未设置，则默认为`$USER_HOME/.gradle`）。
+
+- **`JAVA_HOME`**
+
+  指定要用于客户端VM的JDK安装目录。除非在`org.gradle.java.home`的Gradle属性文件中指定了另一个虚拟机，否则此VM也用于守护进程。
+
+## Project属性
+
+您可以通过`-P`命令行选项将属性直接添加到[Project](https://docs.gradle.org/current/dsl/org.gradle.api.Project.html)对象。
+
+当Gradle看到特别命名的系统属性或环境变量时，它也可以设置项目属性。如果环境变量名称看起来像`ORG_GRADLE_PROJECT_prop=somevalue`，则Gradle将在项目对象上设置`prop`属性，其值为`somevalue`。 Gradle也为系统属性支持此功能，但是具有不同的命名模式，类似于`org.gradle.project.prop`。以下两个都将Project对象上的`foo`属性设置为“`bar`”。
+
+**通过系统属性设置Project属性**
+
+``` properties
+org.gradle.project.foo=bar
+```
+
+**通过环境变量设置Project属性**
+
+```
+ORG_GRADLE_PROJECT_foo=bar
+```
+
+::: tip
+**用户主目录中的属性文件优先于Project目录中的属性文件。**
+:::
+
+如果您没有持续集成服务器的管理员权限，并且需要设置不容易看到的属性值，则此功能非常有用。由于您不能在那种情况下使用`-P`选项，也不能更改系统级配置文件，因此正确的策略是更改持续集成构建作业的配置，并添加与预期模式匹配的环境变量设置。这对于系统上的普通用户是不可见的。
+
+您可以像使用变量一样使用名称来访问构建脚本中的Project属性。
+
+::: tip
+如果引用了Project属性但该属性不存在，则将引发异常，并且构建将失败。
+
+在使用[Project.hasProperty(java.lang.String)](https://docs.gradle.org/current/dsl/org.gradle.api.Project.html#org.gradle.api.Project:hasProperty(java.lang.String))方法访问可选Project属性之前，应检查其是否存在。
+:::
+
+## 配置JVM内存
+
+您可以通过以下方式调整Gradle的JVM选项：
+
+`org.gradle.jvmargs`Gradle属性控制运行构建的VM。默认为`-Xmx512m "-XX:MaxMetaspaceSize=256m"`
+
+**更改构建VM的JVM设置**
+
+```
+org.gradle.jvmargs=-Xmx2g -XX:MaxMetaspaceSize=512m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+```
+
+`JAVA_OPTS`环境变量控制命令行客户端，该命令行客户端仅用于显示控制台输出。默认为`-Xmx64m`。
+
+**更改客户端VM的JVM设置**
+
+```
+JAVA_OPTS="-Xmx64m -XX:MaxPermSize=64m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8"
+```
+
+::: tip
+在一种情况下，客户端VM也可以用作构建VM：如果停用[Gradle Daemon](https://docs.gradle.org/current/userguide/gradle_daemon.html#gradle_daemon)，并且客户端VM具有与构建VM所需的相同设置，则客户端VM将直接运行构建。否则，客户端虚拟机将派生一个新的虚拟机来运行实际的构建，以便采用不同的设置。
+:::
+
+某些任务（例如`test`任务）也会派生其他JVM进程。您可以通过任务本身来配置它们。它们默认都使用`-Xmx512m`。
+
+示例2.为[JavaCompile](https://docs.gradle.org/current/dsl/org.gradle.api.tasks.compile.JavaCompile.html)任务设置Java编译选项
+
+<CodeSwitcher :languages="{ groovy: 'Groovy', kotlin: 'Kotlin' }">
+  <template v-slot:groovy>
+
+  ``` groovy
+  // build.gradle
+
+  plugins {
+      id 'java'
+  }
+
+  tasks.withType(JavaCompile) {
+      options.compilerArgs += ['-Xdoclint:none', '-Xlint:none', '-nowarn']
+  }
+  ```
+
+  </template>
+  <template v-slot:kotlin>
+
+  ``` kotlin
+  // build.gradle.kts
+
+  plugins {
+      java
+  }
+
+  tasks.withType<JavaCompile>().configureEach {
+      options.compilerArgs = listOf("-Xdoclint:none", "-Xlint:none", "-nowarn")
+  }
+  ```
+
+  </template>
+</CodeSwitcher>
+
+请参阅[Test](https://docs.gradle.org/current/dsl/org.gradle.api.tasks.testing.Test.html) API文档中的其他示例，以及[Java插件参考中的测试执行](https://docs.gradle.org/current/userguide/java_testing.html#sec:test_execution)。
+
+使用`--scan`选项时，[Build scans](https://scans.gradle.com/?_ga=2.61875884.1480847771.1569235223-1279986108.1569235223)将告诉您有关执行构建的JVM的信息。
+
+![](https://docs.gradle.org/current/userguide/img/build-scan-infrastructure.png)
+
+## 使用Project属性配置任务
+
+可以根据调用时指定的项目属性来更改任务的行为。
+
+假设您想确保发布版本仅由CI触发。一种简单的方法是通过`isCI`项目属性。
+
+例子3.防止CI外部发布
+
+<CodeSwitcher :languages="{ groovy: 'Groovy', kotlin: 'Kotlin' }">
+  <template v-slot:groovy>
+
+  ``` groovy
+  // build.gradle
+
+  task performRelease {
+      doLast {
+          if (project.hasProperty("isCI")) {
+              println("Performing release actions")
+          } else {
+              throw new InvalidUserDataException("Cannot perform release outside of CI")
+          }
+      }
+  }
+  ```
+
+  </template>
+  <template v-slot:kotlin>
+
+  ``` kotlin
+  // build.gradle.kts
+
+  tasks.register("performRelease") {
+      doLast {
+          if (project.hasProperty("isCI")) {
+              println("Performing release actions")
+          } else {
+              throw InvalidUserDataException("Cannot perform release outside of CI")
+          }
+      }
+  }
+  ```
+
+  </template>
+</CodeSwitcher>
+
+``` sh {1}
+$ gradle performRelease -PisCI=true --quiet
+Performing release actions
+```
 
 ## 通过HTTP代理访问web
+
+通过标准JVM系统属性来配置HTTP或HTTPS代理（例如，用于下载依赖项）。这些属性可以直接在构建脚本中设置。例如，设置HTTP代理主机将通过`System.setProperty('http.proxyHost', 'www.somehost.org')`完成。另外，可以[在gradle.properties中指定属性](#gradle属性)。
+
+**使用`gradle.properties`配置HTTP代理**
+
+``` properties
+systemProp.http.proxyHost=www.somehost.org
+systemProp.http.proxyPort=8080
+systemProp.http.proxyUser=userid
+systemProp.http.proxyPassword=password
+systemProp.http.nonProxyHosts=*.nonproxyrepos.com|localhost
+```
+
+HTTPS有单独的设置。
+
+**使用`gradle.properties`配置HTTPS代理**
+
+``` properties
+systemProp.https.proxyHost=www.somehost.org
+systemProp.https.proxyPort=8080
+systemProp.https.proxyUser=userid
+systemProp.https.proxyPassword=password
+systemProp.https.nonProxyHosts=*.nonproxyrepos.com|localhost
+```
+
+您可能需要设置其他属性才能访问其他网络。这里有2个参考可能会有所帮助：
+
+- [ProxySetup.java in the Ant codebase](https://git-wip-us.apache.org/repos/asf?p=ant.git;a=blob;f=src/main/org/apache/tools/ant/util/ProxySetup.java;hb=HEAD)
+
+- [JDK 7 Networking Properties](http://download.oracle.com/javase/7/docs/technotes/guides/net/properties.html)
+
+### NTLM身份验证
+
+如果您的代理服务器需要NTLM身份验证，则可能需要提供身份验证域以及用户名和密码。您可以通过两种方式提供用于向NTLM代理进行身份验证的域：
+
+- 将`http.proxyUser`系统属性设置为`domain/username`之类的值。
+
+- 通过`http.auth.ntlm.domain`系统属性提供身份验证域。
